--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>Opensite</title>
       <meta http-equiv = "refresh" content = "3; url = https://codiggers.github.io/opensite/gc" />
    </head>
    <body>
-      <p>Redirecting to another URL</p>
    </body>
 </html>
