--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Opensite</title>
-      <meta http-equiv = "refresh" content = "3; url = https://codiggers.github.io/opensite/gc" />
+      <title>Dare Milega</title>
+      <meta http-equiv = "refresh" content = "3; url = https://daremile.ga/opensite/gc" />
    </head>
    <body>
    </body>
