--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Dare Milega</title>
-      <meta http-equiv = "refresh" content = "3; url = https://daremile.ga/opensite/gc" />
+      <meta http-equiv = "refresh" content = "3; url = https://daremile.ga/gc" />
    </head>
    <body>
    </body>
