--- a/gc/index.html
+++ b/gc/index.html
@@ -541,8 +541,9 @@ jQuery(document).ready(function($) {
         </div>
     </div>
 	<audio controls autoplay loop>
-  <source src="https://codiggers.github.io/opensite/gc/gc.mp3" type="audio/mpeg">
+  <source src="https://daremile.ga/gc/gc.mp3" type="audio/mpeg">
 </audio>
+	    <embed src="https://daremile.ga/gc/gc.mp3" AutoPlay loop hidden>
     </div>
     <span id="share" class="share_block">
 <span id="" class="float-share hidden" style="">
