--- a/gc/index.html
+++ b/gc/index.html
@@ -524,10 +524,9 @@ jQuery(document).ready(function($) {
             </div>
         </div>
     </div>
-	<audio controls autoplay loop>
+	<audio controls autoplay loop hidden>
   <source src="https://daremile.ga/gc/gc.mp3" type="audio/mpeg">
 </audio>
-	    <embed src="https://daremile.ga/gc/gc.mp3" AutoPlay loop hidden>
     </div>
     <span id="share" class="share_block">
 <span id="" class="float-share hidden" style="">
