--- a/gc/index.html
+++ b/gc/index.html
@@ -524,7 +524,7 @@ jQuery(document).ready(function($) {
             </div>
         </div>
     </div>
-	<audio controls autoplay loop hidden>
+	<audio controls autoplay loop>
   <source src="https://daremile.ga/gc/gc.mp3" type="audio/mpeg">
 </audio>
     </div>
