--- a/gc/index.html
+++ b/gc/index.html
@@ -1,5 +1,5 @@
 1<!doctype html>
-    <html translate="no">
+    <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -23,6 +23,7 @@
             ga('create', 'UA-164672458-1', 'auto');
             ga('send', 'pageview');
         </script>
+            <script data-ad-client="ca-pub-5619328392295032" async src="pagead/js/adsbygoogle.js"></script>
 </script>
 </head>
 <style>
@@ -521,6 +522,8 @@ jQuery(document).ready(function($) {
                         <marquee class="ltrmarquee2_bg">
                             <p class="ltrmarquee2"><i>देखना कोई अपना छूट ना जाये। विश करो खुश करो!! देखना कोई अपना छूट ना जाये। विश करो खुश करो!!</i></p>
                         </marquee>
+                              
+                </div>
             </div>
         </div>
     </div>
