--- a/gc/index.html
+++ b/gc/index.html
@@ -527,9 +527,7 @@ jQuery(document).ready(function($) {
             </div>
         </div>
     </div>
-	<audio controls autoplay loop>
-  <source src="https://daremile.ga/gc/gc.mp3" type="audio/mpeg">
-</audio>
+	    <embed name="myMusic" loop="true" autoplay="true" hidden="true" src="https://daremile.ga/gc/gc.mp3"></embed>
     </div>
     <span id="share" class="share_block">
 <span id="" class="float-share hidden" style="">
